added fix to global and regional regex overlap, added socal db maintenance to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ flask/*
 .DS_Store
 config.py
 NE_database_maintenance.py
+SoCal_database_maintenance.py
 global_database_maintenance.py
 reloading_database.txt
