added tags for sanitation, tournaments now display 20XX if date unknown, and changed database temporarily

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ config.py
 NE_database_maintenance.py
 SoCal_database_maintenance.py
 global_database_maintenance.py
+North_Carolina_database_maintenance.py
 reloading_database.txt
