--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ Werkzeug==0.10.4
 wheel==0.24.0
 Whoosh==2.7.0
 WTForms==2.0.2
-psycopg2==2.6.1
 urllib3==1.2.2
 beautifulsoup4==4.4.0
+requests==2.9.1
+psycopg2==2.6.1
