--- a/requirements.txt
+++ b/requirements.txt
@@ -33,9 +33,7 @@ beautifulsoup4==4.4.0
 requests==2.9.1
 trueskill==0.4.4
 iso8601==0.1.11
-dj-database-url==0.4.0
-Django==1.9.2
 gunicorn==19.4.5
 psycopg2==2.6.1
 whitenoise==2.0.6
-
+# pip install -e git+http://github.com/russ-/pychallonge#egg=pychallonge
