checkpoint for global stats

--- a/requirements.txt
+++ b/requirements.txt
@@ -36,4 +36,5 @@ iso8601==0.1.11
 gunicorn==19.4.5
 psycopg2==2.6.1
 whitenoise==2.0.6
+flask-admin==1.4.0
 # pip install -e git+http://github.com/russ-/pychallonge#egg=pychallonge
